change intput to button

--- a/app.html
+++ b/app.html
@@ -17,9 +17,7 @@
 <section></section>
 <footer>
     <nav id="playback">
-        <input class=prev type="button" value="prev">
-        <input class=play type="button" value="play/pause">
-        <input class=next type="button" value="next">
+        <button class=prev type="button" value="prev">prev</button><button class=play type="button" value="play/pause">play/pause</button><button class=next type="button" value="next">next</button>
     </nav>
 </footer>
 </body>
