show title/artist/time

--- a/app.html
+++ b/app.html
@@ -14,7 +14,11 @@
         <input class=right type="button" value="menu">
     </nav>
 </header>
-<section></section>
+<section id="current">
+    <ctie class="title">no title</ctie>
+    <span class="artist">no artist</span>
+    <span class="elapsed">no playing</span>
+</section>
 <footer>
     <nav id="playback">
         <button class=prev type="button" value="prev">prev</button><button class=play type="button" value="play/pause">play/pause</button><button class=next type="button" value="next">next</button>
