show library tree

--- a/app.html
+++ b/app.html
@@ -14,10 +14,15 @@
         <input class=right type="button" value="menu">
     </nav>
 </header>
+<section id="list" style="display: none">
+    <ol>
+    </ol>
+</section>
 <section id="current">
     <ctie class="title">no title</ctie>
     <span class="artist">no artist</span>
     <span class="elapsed">no playing</span>
+    <canvas class="elapsedbar"></canvas>
 </section>
 <footer>
     <nav id="playback">
