add backto current button

--- a/app.html
+++ b/app.html
@@ -10,8 +10,8 @@
 <body>
 <header>
     <nav id="menu">
-        <input class=left type="button" value="up">
-        <input class=right type="button" value="menu">
+        <input class=up type="button" value="up">
+        <input class=back type="button" value="back">
     </nav>
 </header>
 <section id="list" style="display: none">
