remove reset button

--- a/app.html
+++ b/app.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <nav id="menu">
-        <button  class=up type="button">up</button><button class=back type="button">back</button><button class=reset type="button">reset</button>
+        <button  class=up type="button">up</button><button class=back type="button">back</button>
     </nav>
 </header>
 <section id="list" style="display: none">
