--- a/app.html
+++ b/app.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <nav id="menu">
-        <button  class=up type="button">up</button><button class=back type="button">back</button>
+        <button  class=up type="button">list</button><button class=back type="button">now playing</button>
     </nav>
 </header>
 <section id="list" style="display: none">
