move css html js to assets/

--- a/assets/app.html
+++ b/assets/app.html
@@ -5,8 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<link rel="stylesheet" type="text/css" href="./app.css">
-<script src="./app.js"></script>
+<link rel="stylesheet" type="text/css" href="/assets/app.css">
+<script src="/assets/app.js"></script>
 <title>vv</title>
 </head>
 <body>
@@ -32,7 +32,7 @@
 </section>
 <footer>
     <nav id="playback">
-        <button class=prev type="button" value="prev"><img src="assets/prev.svg" alt="prev"></button><button class=play type="button" value="play/pause"><img src="assets/play.svg" alt="play"></button><button class=next type="button" value="next"><img src="assets/next.svg" alt="next"></button>
+        <button class=prev type="button" value="prev"><img src="/assets/prev.svg" alt="prev"></button><button class=play type="button" value="play/pause"><img src="/assets/play.svg" alt="play"></button><button class=next type="button" value="next"><img src="/assets/next.svg" alt="next"></button>
     </nav>
 </footer>
 </body>
