show repeat / random status

--- a/assets/app.html
+++ b/assets/app.html
@@ -28,6 +28,10 @@
     <ctie class="title">no title</ctie>
     <span class="artist">no artist</span>
     <span class="elapsed">no playing</span>
+    <nav class="control">
+        <button class=repeat><img src="/assets/repeat.svg" alt="repeat"></button>
+        <button class=random><img src="/assets/random.svg" alt="random"></button>
+    </nav>
     <ul class="detail"></ul>
 </section>
 <footer>
