add volume control

--- a/assets/app.html
+++ b/assets/app.html
@@ -33,6 +33,9 @@
         <button class=random><img src="/assets/random.svg" alt="random"></button>
     </nav>
     <ul class="detail"></ul>
+    <nav class="control_volume">
+        <input type="range" min=0 max=100 step=1>
+    </nav>
 </section>
 <footer>
     <nav id="playback">
