--- a/assets/app.html
+++ b/assets/app.html
@@ -37,6 +37,13 @@
         <input type="range" min=0 max=100 step=1>
     </nav>
 </section>
+<section id="config" style="display: none">
+    <h3>Volume</h3>
+    <ul>
+        <li><input type="checkbox" id="show_volume">Show volume nob</li>
+        <li>Max volume: <input type="number" id="max_volume" min="10" max="100" step="10" value="100"></li>
+    </ul>
+</section>
 <footer>
     <nav id="playback">
         <button class=prev type="button" value="prev"><img src="/assets/prev.svg" alt="prev"></button><button class=play type="button" value="play/pause"><img src="/assets/play.svg" alt="play"></button><button class=next type="button" value="next"><img src="/assets/next.svg" alt="next"></button>
