rename current -> main

--- a/assets/app.html
+++ b/assets/app.html
@@ -24,7 +24,7 @@
     <ol>
     </ol>
 </section>
-<section id="current">
+<section id="main">
     <ctie class="title">no title</ctie>
     <span class="artist">no artist</span>
     <span class="elapsed">no playing</span>
