add error dialog

--- a/assets/app.html
+++ b/assets/app.html
@@ -25,7 +25,7 @@
     </ol>
 </section>
 <section id="main">
-    <ctie class="title">no title</ctie>
+    <cite class="title">no title</cite>
     <span class="artist">no artist</span>
     <span class="elapsed">no playing</span>
     <ul class="detail"></ul>
@@ -36,6 +36,12 @@
         <li><input type="checkbox" id="show_volume">Show volume nob</li>
         <li>Max volume: <input type="number" id="max_volume" min="10" max="100" step="10" value="100"></li>
     </ul>
+</section>
+<article id="error">
+    <h3 class="title">error title</h3>
+    <span class="description">error description</span>
+</article>
+
 </section>
 <footer>
     <nav id="playback">
