add back/main/settings image

--- a/assets/app.html
+++ b/assets/app.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <script src="/assets/app.js"></script>
 <title>vv</title>
@@ -12,7 +12,9 @@
 <body>
 <header>
     <nav id="menu">
-        <button class=up type="button">list</button><button class=back type="button">now playing</button><button class=menu type="button">menu</button>
+        <button class=back type="button"><img src="/assets/back.svg" alt="back"></button>
+        <button class=main type="button"><img src="/assets/main.svg" alt="main"></button>
+        <button class=settings type="button"><img src="/assets/settings.svg" alt="settings"></button>
     </nav>
     <nav id="submenu" style="display: none">
         <ol>
