--- a/assets/app.html
+++ b/assets/app.html
@@ -43,7 +43,14 @@
         </li>
         <li>
             <div class="description">Max volume: </div>
-            <input type="number" class="value" id="max_volume" min="10" max="100" step="10" value="100">
+            <select class="value" id="max_volume">
+                <option value="50">50</option>
+                <option value="60">60</option>
+                <option value="70">70</option>
+                <option value="80">80</option>
+                <option value="90">90</option>
+                <option value="100">100</option>
+            </select>
         </li>
     </ul>
     </article>
