--- a/assets/app.html
+++ b/assets/app.html
@@ -31,6 +31,19 @@
     <span class="artist">no artist</span>
     <span class="elapsed">no playing</span>
     <ul class="detail"></ul>
+    <div class="elapsed_img">
+        <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+
+            <g stroke="#404040" stroke-width="4" fill="none">
+                <path id="elapsed_right" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170"></path>
+                <path id="elapsed_left" d="M 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
+                <g stroke-width="4" stroke-opacity="0.5">
+                    <path d="M 100,30 L 100,30 A 70,70 0 0,1 100,170"></path>
+                    <path d="M 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
+                </g>
+            </g>
+        </svg>
+    </div>
 </section>
 <section id="config" style="display: none">
     <h1>configuration</h1>
