--- a/assets/app.html
+++ b/assets/app.html
@@ -48,24 +48,28 @@
 <section id="config" style="display: none">
     <h1>configuration</h1>
     <article>
-    <h3>Volume</h3>
-    <ul>
-        <li>
-            <div class="description">show volume nob</div>
-            <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
-        </li>
-        <li>
-            <div class="description">Max volume: </div>
-            <select class="value" id="max_volume">
-                <option value="50">50</option>
-                <option value="60">60</option>
-                <option value="70">70</option>
-                <option value="80">80</option>
-                <option value="90">90</option>
-                <option value="100">100</option>
-            </select>
-        </li>
-    </ul>
+        <h3>Volume</h3>
+        <ul>
+            <li>
+                <div class="description">show volume nob</div>
+                <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
+            </li>
+            <li>
+                <div class="description">Max volume: </div>
+                <select class="value" id="max_volume">
+                    <option value="50">50</option>
+                    <option value="60">60</option>
+                    <option value="70">70</option>
+                    <option value="80">80</option>
+                    <option value="90">90</option>
+                    <option value="100">100</option>
+                </select>
+            </li>
+        </ul>
+    </article>
+    <article>
+        <h3>Devices</h3>
+        <ul class="devices"></ul>
     </article>
 </section>
 <article id="error">
