add view follows playback option

--- a/assets/app.html
+++ b/assets/app.html
@@ -47,6 +47,15 @@
 <section id="config" style="display: none">
     <h1>configuration</h1>
     <article>
+        <h3>Playback</h3>
+        <ul>
+            <li>
+                <div class="description">view follows playback</div>
+                <div class="value switch"><input type="checkbox" id="playback_view_follow"><label for="playback_view_follow"></label></div>
+            </li>
+        </ul>
+    </article>
+    <article>
         <h3>Volume</h3>
         <ul>
             <li>
