fix config description text

--- a/assets/app.html
+++ b/assets/app.html
@@ -50,7 +50,7 @@
         <h3>Playback</h3>
         <ul>
             <li>
-                <div class="description">view follows playback</div>
+                <div class="description">Listview follows playback</div>
                 <div class="value switch"><input type="checkbox" id="playback_view_follow"><label for="playback_view_follow"></label></div>
             </li>
         </ul>
@@ -59,11 +59,11 @@
         <h3>Volume</h3>
         <ul>
             <li>
-                <div class="description">show volume nob</div>
+                <div class="description">Show volume nob</div>
                 <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
             </li>
             <li>
-                <div class="description">Max volume: </div>
+                <div class="description">Max volume</div>
                 <select class="value" id="max_volume">
                     <option value="50">50</option>
                     <option value="60">60</option>
