--- a/assets/app.html
+++ b/assets/app.html
@@ -29,7 +29,7 @@
 <section id="main">
     <cite class="title">no title</cite>
     <span class="artist">no artist</span>
-    <ul class="detail"></ul>
+    <div id="current_cover"></div>
     <div class="elapsed_img">
         <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
 
