--- a/assets/app.html
+++ b/assets/app.html
@@ -18,13 +18,12 @@
     </nav>
     <nav id="submenu" style="display: none">
         <ol>
-            <li><button class=reload type="button">reload</button></li>
-            <li><button class=config type="button">config</button></li>
+            <li><button class=reload type="button">reload</button>
+            <li><button class=config type="button">config</button>
     </nav>
 </header>
 <section id="list">
-    <ol>
-    </ol>
+    <ol></ol>
 </section>
 <section id="main">
     <cite class="title">no title</cite>
@@ -32,7 +31,6 @@
     <div id="current_cover"></div>
     <div class="elapsed_img">
         <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
-
             <g stroke="#404040" stroke-width="4" fill="none">
                 <path id="elapsed_right" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170"></path>
                 <path id="elapsed_left" d="M 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
@@ -52,7 +50,6 @@
             <li>
                 <div class="description">Listview follows playback</div>
                 <div class="value switch"><input type="checkbox" id="playback_view_follow"><label for="playback_view_follow"></label></div>
-            </li>
         </ul>
     </article>
     <article>
@@ -61,7 +58,6 @@
             <li>
                 <div class="description">Show volume nob</div>
                 <div class="value switch"><input type="checkbox" id="show_volume"><label for="show_volume"></label></div>
-            </li>
             <li>
                 <div class="description">Max volume</div>
                 <select class="value" id="max_volume">
@@ -72,7 +68,6 @@
                     <option value="90">90</option>
                     <option value="100">100</option>
                 </select>
-            </li>
         </ul>
     </article>
     <article>
