--- a/assets/app.html
+++ b/assets/app.html
@@ -45,6 +45,13 @@
 <section id="config" style="display: none">
     <h1>configuration</h1>
     <article>
+        <h3>Appearance</h3>
+        <ul>
+            <li>
+                <div class="description">Black</div>
+                <div class="value switch"><input type="checkbox" id="body_black"><label for="body_black"></label></div>
+        </ul>
+    <article>
         <h3>Playback</h3>
         <ul>
             <li>
