--- a/assets/app.html
+++ b/assets/app.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-status-bar-style" content="dark-translucent">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <script src="/assets/app.js"></script>
 <title>vv</title>
@@ -12,9 +12,32 @@
 <body>
 <header>
     <nav id="menu">
-        <button class=back type="button"><img src="/assets/back.svg" alt="back"></button>
-        <button class=main type="button"><img src="/assets/main.svg" alt="main"></button>
-        <button class=settings type="button"><img src="/assets/settings.svg" alt="settings"></button>
+        <button class=back type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="stroke" d="M 40,100 100,40 160,40 160,160  100,160 z"/>
+            </svg>
+        </button>
+        <button class=main type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
+            </svg>
+        </button>
+        <button class=settings type="button">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="stroke"
+                 d="M 100,30 100,60 z
+                 M 100,170 100,140 z
+                 M 30,100 60,100 z
+                 M 170,100 140,100 z
+                 M 170,100 140,100 z
+                 M 100,60 A 40,40 0 1,1 100,140
+                 M 100,140 A 40,40 0 1,1 100,60
+                 M 50,50 71,71 z
+                 M 50,150 71,129 z
+                 M 150,50 129,71 z
+                 M 150,150 129,129 z"/>
+            </svg>
+        </button>
     </nav>
     <nav id="submenu" style="display: none">
         <ol>
@@ -31,12 +54,8 @@
     <div id="current_cover"></div>
     <div class="elapsed_img">
         <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
-            <g stroke="#404040" stroke-width="4" fill="none">
-                <path id="elapsed_circle" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
-                <g stroke-width="4" stroke-opacity="0.5">
-                    <path d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
-                </g>
-            </g>
+            <path id="elapsed_circle" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
+            <path class="inactive" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
         </svg>
     </div>
 </section>
@@ -46,8 +65,8 @@
         <h3>Appearance</h3>
         <ul>
             <li>
-                <div class="description">Black</div>
-                <div class="value switch"><input type="checkbox" id="body_black"><label for="body_black"></label></div>
+                <div class="description">Dark</div>
+                <div class="value switch"><input type="checkbox" id="body_dark"><label for="body_dark"></label></div>
         </ul>
     <article>
         <h3>Playback</h3>
@@ -88,14 +107,40 @@
 </section>
 <footer>
     <nav id="playback">
-        <button class=prev type="button" value="prev"><img src="/assets/prev.svg" alt="prev"></button><button class=play type="button" value="play/pause"><img src="/assets/play.svg" alt="play"></button><button class=next type="button" value="next"><img src="/assets/next.svg" alt="next"></button>
+        <button class=prev type="button" value="prev">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="fill" d="M 155,60 85,100 155,140 z M 105,60 35,100 105,140 z"/>
+            </svg>
+        </button>
+        <button id=playback-toggleplay class=play type="button" value="play/pause">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="fill play" d="M 70,60 140,100 70,140 z"/>
+                <path class="fill pause" d="M 75,60 85,60 85,140 75,140 z M 125,60 115,60 115,140 125,140 z"/>
+                <path class="stroke play_circle" d="M 25,100 A 75,75 0 1,1 175,100 A 75,75 0 1,1 25,100 z"/>
+            </svg>
+        </button>
+        <button class=next type="button" value="next">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class="fill" d="M 45,60 115,100 45,140 z M 95,60 165,100 95,140 z"/>
+            </svg>
+        </button>
     </nav>
     <nav id="playback_volume">
         <input type="range" min=0 max=100 step=1>
     </nav>
     <nav id="playback_list">
-        <button class=repeat><img src="/assets/repeat.svg" alt="repeat"></button>
-        <button class=random><img src="/assets/random.svg" alt="random"></button>
+        <button class="repeat on">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class=fill d="M 85,25 115,40 85,55 z"/>
+                <rect class=stroke x="40" y="40" width="120" height="120" rx="30" ry="30"/>
+            </svg>
+        </button>
+        <button class="random on">
+            <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+                <path class=fill d="M 155,25 185,40 155,55 z M 155,145 185,160 155,175 z"/>
+                <path class=stroke d="M 40,40 A 60,60 0 1,1 40,160 M 160,160 A 60,60 0 1,1 160,40 "/>
+            </svg>
+        </button>
     </nav>
 </footer>
 </body>
