show background image

--- a/assets/app.html
+++ b/assets/app.html
@@ -45,6 +45,10 @@
             <li><button class=config type="button">config</button>
     </nav>
 </header>
+<div id="background-image"></div>
+<div id="background">
+    <div id="background-overlay"></div>
+</div>
 <section id="list">
     <ol></ol>
 </section>
@@ -67,6 +71,9 @@
             <li>
                 <div class="description">Dark</div>
                 <div class="value switch"><input type="checkbox" id="body_dark"><label for="body_dark"></label></div>
+            <li>
+                <div class="description">Background image</div>
+                <div class="value switch"><input type="checkbox" id="toggle-background-image"><label for="toggle-background-image"></label></div>
         </ul>
     <article>
         <h3>Playback</h3>
