use css display prop for main/list/config

--- a/assets/app.html
+++ b/assets/app.html
@@ -63,7 +63,7 @@
         </svg>
     </div>
 </section>
-<section id="config" style="display: none">
+<section id="config">
     <h1>configuration</h1>
     <article id="config-appearance">
         <h3>Appearance</h3>
