do not use style.display

--- a/assets/app.html
+++ b/assets/app.html
@@ -39,7 +39,7 @@
             </svg>
         </button>
     </nav>
-    <nav id="submenu" style="display: none">
+    <nav id="submenu">
         <ol>
             <li><button class=reload type="button">reload</button>
             <li><button class=config type="button">config</button>
