remove resize event

--- a/assets/app.html
+++ b/assets/app.html
@@ -55,7 +55,9 @@
 <section id="main">
     <cite class="title">no title</cite>
     <span class="artist">no artist</span>
-    <div id="current_cover"></div>
+    <div id="main-cover-frame">
+    <div id="main-cover"></div>
+    </div>
     <div class="elapsed_img">
         <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
             <path id="elapsed_circle" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
