--- a/assets/app.html
+++ b/assets/app.html
@@ -53,14 +53,14 @@
     <ol></ol>
 </section>
 <section id="main">
-    <cite class="title">no title</cite>
-    <span class="artist">no artist</span>
-    <div id="main-cover-frame">
-    <div id="main-cover"></div>
+    <cite id=main-title>no title</cite>
+    <span id=main-artist>no artist</span>
+    <div id=main-cover-frame>
+        <div id=main-cover></div>
     </div>
-    <div class="elapsed_img">
-        <svg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
-            <path id="elapsed_circle" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
+    <div id=main-elapsed-circle-frame>
+        <svg id=main-elapsed-circle xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
+            <path id="main-elapsed-circle-active" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
             <path class="inactive" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
         </svg>
     </div>
