remove initial active circle

--- a/assets/app.html
+++ b/assets/app.html
@@ -60,8 +60,8 @@
     </div>
     <div id=main-elapsed-circle-frame>
         <svg id=main-elapsed-circle xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 200 200">
-            <path id="main-elapsed-circle-active" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
-            <path class="inactive" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
+            <path id="main-elapsed-circle-active" class="stroke" d=""></path>
+            <path class="inactive stroke" d="M 100,30 L 100,30 A 70,70 0 0,1 100,170 L 100,170 A 70,70 0 0,1 100,30"></path>
         </svg>
     </div>
 </section>
