move submenu to menu-settings-list

--- a/assets/app.html
+++ b/assets/app.html
@@ -38,11 +38,10 @@
                  M 150,150 129,129 z"/>
             </svg>
         </button>
+        <ol id=menu-settings-list>
+            <li><button id=menu-settings-list-reload type="button">reload</button>
+            <li><button id=menu-settings-list-config type="button">config</button>
     </nav>
-    <nav id="submenu">
-        <ol>
-            <li><button class=reload type="button">reload</button>
-            <li><button class=config type="button">config</button>
     </nav>
 </header>
 <div id="background-image"></div>
