--- a/assets/app.html
+++ b/assets/app.html
@@ -12,35 +12,36 @@
 <body>
 <header>
     <nav id="menu">
-        <button id=menu-back class=back type="button">
-            <svg width="200" height="200" viewBox="0 0 200 200">
-                <path class="stroke" d="M 40,100 100,40 160,40 160,160  100,160 z"/>
-            </svg>
-        </button>
-        <button id=menu-main class=main type="button">
-            <svg width="200" height="200" viewBox="0 0 200 200">
-                <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
-            </svg>
-        </button>
-        <button id=menu-settings class=settings type="button">
-            <svg width="200" height="200" viewBox="0 0 200 200">
-                <path class="stroke"
-                 d="M 100,30 100,60 z
-                 M 100,170 100,140 z
-                 M 30,100 60,100 z
-                 M 170,100 140,100 z
-                 M 170,100 140,100 z
-                 M 100,60 A 40,40 0 1,1 100,140
-                 M 100,140 A 40,40 0 1,1 100,60
-                 M 50,50 71,71 z
-                 M 50,150 71,129 z
-                 M 150,50 129,71 z
-                 M 150,150 129,129 z"/>
-            </svg>
-        </button>
+        <ol id="menu-list">
+            <li id=menu-back>
+                <svg width="200" height="200" viewBox="0 0 200 200">
+                    <path class="stroke" d="M 40,100 100,40 160,40 160,160  100,160 z"/>
+                </svg>
+                <div id=menu-back-content></div>
+            <li id=menu-main>
+                <svg width="200" height="200" viewBox="0 0 200 200">
+                    <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
+                </svg>
+            <li id=menu-settings>
+                <svg width="200" height="200" viewBox="0 0 200 200">
+                    <path class="stroke"
+                     d="M 100,30 100,60 z
+                     M 100,170 100,140 z
+                     M 30,100 60,100 z
+                     M 170,100 140,100 z
+                     M 170,100 140,100 z
+                     M 100,60 A 40,40 0 1,1 100,140
+                     M 100,140 A 40,40 0 1,1 100,60
+                     M 50,50 71,71 z
+                     M 50,150 71,129 z
+                     M 150,50 129,71 z
+                     M 150,150 129,129 z"/>
+                </svg>
+        </ol>
         <ol id=menu-settings-list>
             <li><button id=menu-settings-list-reload type="button">reload</button>
             <li><button id=menu-settings-list-config type="button">config</button>
+        </ol>
     </nav>
     </nav>
 </header>
