add rescan library in config

--- a/assets/app.html
+++ b/assets/app.html
@@ -85,6 +85,14 @@
           <option value="32">32</option>
         </select>
     </ul>
+  </article>
+  <article>
+    <h3>Library</h3>
+    <ul class=note>
+      <li>
+        <button id=library-rescan class="value button-simple" type="button">Rescan</button>
+    </ul>
+  </article>
   <article>
     <h3>Playback</h3>
     <ul class=note>
