simple header content

--- a/assets/app.html
+++ b/assets/app.html
@@ -16,7 +16,7 @@
       <svg class=header-icon width="40" height="40" viewBox="0 0 200 200">
         <path class="stroke" d="M 40,100 100,40 160,40 160,160 100,160 z"/>
       </svg>
-      <div id=menu-back-content></div>
+      <span id=menu-back-content></span>
     <li id=menu-main class=header-item>
       <svg class=header-icon width="40" height="40" viewBox="0 0 200 200">
         <path class="stroke" d="M 100,40 160,100 160,160 40,160 40,100 z"/>
