--- a/assets/app.html
+++ b/assets/app.html
@@ -47,7 +47,7 @@
   <div id="background-overlay" class=background-overlay></div>
 </div>
 <section id="list" class="scrollable">
-  <ol class=note></ol>
+  <ol id="list-items" class=note></ol>
 </section>
 <section id="main" class="unscrollable">
   <div id="main-box">
