fix dropdown menu size

--- a/assets/app.html
+++ b/assets/app.html
@@ -38,8 +38,8 @@
       </svg>
   </ol>
   <ol id=menu-settings-list>
-    <li><button id=menu-settings-list-reload type="button">reload</button>
-    <li><button id=menu-settings-list-config type="button">config</button>
+    <li id=menu-settings-list-reload class=dropdown-item>reload
+    <li id=menu-settings-list-config class=dropdown-item>config
   </ol>
 </header>
 <div id="background-image" class=fit></div>
