--- a/assets/app.html
+++ b/assets/app.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="dark-translucent">
+<meta name="apple-mobile-web-app-title" content="Music">
 <link rel="stylesheet" type="text/css" href="/assets/app.css">
 <script src="/assets/app.js"></script>
 <title>vv</title>
